--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/bank
 spring.datasource.username=bankroot
 spring.datasource.password=bankroot
-#spring.datasource.hikari.transaction-isolation= snapshot isolation TODO ?????? ????, ??? ????????? ???????? ???????
+logging.level.org.springframework.security=DEBUG
+
+server.servlet.session.persistent=false
+#spring.datasource.hikari.transaction-isolation= snapshot isolation
 
 spring.sql.init.mode=always
 spring.datasource.initialize=true
